# test_technique

./: .gitignore  CMakeLists.txt  README.md
src/: couleur.cpp  image.cpp  sort.cpp
